err/mozdevice.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/blessings'...
Listing './lib/python3.5/site-packages/blessings-1.6.1.dist-info'...
Listing './lib/python3.5/site-packages/mozdevice'...
Compiling './lib/python3.5/site-packages/mozdevice/adb_android.py'...
***   File "./lib/python3.5/site-packages/mozdevice/adb_android.py", line 93
    except (ADBError, ADBRootError), e:
                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mozdevice/dmcli.py'...
***   File "./lib/python3.5/site-packages/mozdevice/dmcli.py", line 212
    print self.dm.deviceRoot
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/mozdevice-0.50.egg-info'...
Listing './lib/python3.5/site-packages/mozfile'...
Compiling './lib/python3.5/site-packages/mozfile/mozfile.py'...
***   File "./lib/python3.5/site-packages/mozfile/mozfile.py", line 57
    print "src: %s" % src
                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/mozfile-1.2.egg-info'...
Listing './lib/python3.5/site-packages/mozinfo'...
Compiling './lib/python3.5/site-packages/mozinfo/mozinfo.py'...
***   File "./lib/python3.5/site-packages/mozinfo/mozinfo.py", line 290
    print '%s choices: %s' % (key, ' '.join([str(choice)
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mozinfo-0.10.egg-info'...
Listing './lib/python3.5/site-packages/mozlog'...
Listing './lib/python3.5/site-packages/mozlog/formatters'...
Listing './lib/python3.5/site-packages/mozlog/formatters/html'...
Listing './lib/python3.5/site-packages/mozlog/handlers'...
Listing './lib/python3.5/site-packages/mozlog/pytest_mozlog'...
Listing './lib/python3.5/site-packages/mozlog/scripts'...
Listing './lib/python3.5/site-packages/mozlog/unstructured'...
Listing './lib/python3.5/site-packages/mozlog-3.7.egg-info'...
Listing './lib/python3.5/site-packages/moznetwork'...
Listing './lib/python3.5/site-packages/moznetwork-0.27.egg-info'...
Listing './lib/python3.5/site-packages/mozprocess'...
Compiling './lib/python3.5/site-packages/mozprocess/processhandler.py'...
***   File "./lib/python3.5/site-packages/mozprocess/processhandler.py", line 283
    print "ProcessManager NOT managing child processes"
                                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mozprocess/winprocess.py'...
***   File "./lib/python3.5/site-packages/mozprocess/winprocess.py", line 450
    print 'Starting parent'
                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/mozprocess-0.25.egg-info'...
Listing './lib/python3.5/site-packages/mozterm'...
Listing './lib/python3.5/site-packages/mozterm-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
